# kan-rs

./: Cargo.toml  README.md
src/: kan.rs  lib.rs  main.rs  symbolic_kan_layer.rs
src/kan/: kan.rs  kan_layer.rs  mod.rs  symbolic_kan_layer.rs
