[package]
name = "kan-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "kan"
path = "src/lib.rs"

[[bin]]
name = "kan"
path = "src/bin/main.rs"

[dependencies]
plotpy = "0.6.3"
pyo3 = "0.21.2"
tch = "0.16.0"
